# Zekher-Demo

./: README.md
frontend/: .eslintrc.json  .gitignore  .prettierrc  next.config.js  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json
frontend/app/: global-error.tsx  layout.tsx  providers.jsx
frontend/app/auth/: layout.tsx
frontend/app/auth/sign-in/[[...sign-in]]/: page.tsx
frontend/app/auth/sign-up/[[...sign-up]]/: page.tsx
frontend/app/chat/[[...conversationId]]/: page.tsx
frontend/app/history/: actions.ts  page.tsx
frontend/app/share/[[...conversationId]]/: page.tsx
frontend/components/: bottomBar.tsx  chatView.tsx  footer.tsx  header.tsx  loadingScreen.tsx  messageBubble.tsx
frontend/components/ui/: alert.tsx  button.tsx  card.tsx  drawer.tsx  dropdown-menu.tsx  hover-card.tsx  input.tsx  label.tsx  toast.tsx
frontend/lib/: sources.ts  types.ts
new-server/: .gitignore  langgraph.json  pyproject.toml
new-server/agent/: configuration.py  prompts.py  tools.py
new-server/data/config/: ingestion.py  ingestion2.py  retrieval.py
new-server/data/optimized_sources/: heisler.txt  isakovitch.txt  moskovitz.txt
old-server/: .gitignore  Dockerfile  pyproject.toml
old-server/app/: agent.py  find_info.py  history.py  optimize.py  server.py  share.py  summary.py  vectorstore.py
old-server/app/optimized_sources/: benmayor.txt  gross.txt  hoess.txt  schiver.txt  sochami.txt  stumachin.txt
